5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4373/executions/1577_1330.log
== TEST (2019-03-26 18:14:47) 
-- CODE:
a=6
b=250
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:14:48) 
-- CODE:
a=6
b=250
print(250/6)
-- EXECUTION TIME:
0.180306
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:15:03) 
-- CODE:
a=6
b=250
print(b/a)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:15:04) 
-- CODE:
a=6
b=250
print(b/a)
-- EXECUTION TIME:
0.159749
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:16:39) 
-- CODE:
a=6
b=250
c=b/a
print(roud(c,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(roud(c,2))
NameError: name 'roud' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:16:41) 
-- CODE:
a=6
b=250
c=b/a
print(roud(c,2))
-- EXECUTION TIME:
0.187076
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 4, in <module>
    print(roud(c,2))
NameError: name 'roud' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:17:17) 
-- CODE:
a=6
b=250
c=b/a
print(c)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:18:07) 
-- CODE:
a=6
b=250
c=b/a
print(round(c,n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(c,n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:18:08) 
-- CODE:
a=6
b=250
c=b/a
print(round(c,n))
-- EXECUTION TIME:
0.12259
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 4, in <module>
    print(round(c,n))
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:18:57) 
-- CODE:
a=6
b=250
c=b/a
print(round(c,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:18:58) 
-- CODE:
a=6
b=250
c=b/a
print(round(c,2))
-- EXECUTION TIME:
0.199077
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:52:43) 
-- CODE:
a=6
b=250
c=b/a
print(round(c,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
